refactor(portfolio): 統一專案展示組件與數據結構，移除 MusicPlayerEvidence

--- a/public/locales/en/projects/aiChatApp.json
+++ b/public/locales/en/projects/aiChatApp.json
@@ -132,8 +132,12 @@
         }
       ]
     },
-    "evidence": {
-      "videos": {
+    "gallery": {
+      "tabs": {
+        "demo": "Demo",
+        "screenshots": "App Screenshots"
+      },
+      "demo": {
         "v1": {
           "title": "Send Message",
           "desc": "Demonstrates real-time message sending with AI response"
