--- a/public/locales/en/projects/musicPlayer.json
+++ b/public/locales/en/projects/musicPlayer.json
@@ -112,8 +112,12 @@
         }
       }
     ],
-    "evidence": {
-      "videos": {
+    "gallery": {
+      "tabs": {
+        "demo": "Demo",
+        "screenshots": "App Screenshots"
+      },
+      "demo": {
         "v1": {
           "title": "Music Filtering",
           "desc": "Demonstrates multi-condition filtering while keeping music playing"
