feat(portfolio): 優化專案概覽 UI 並新增商店連結區塊
- 重構 `ProjectOverview` 佈局為整合式資訊列設計，並導入 i18n 支援。
- 新增 `StoreSection` 元件，用於展示 App Store、Google Play 及官方網站連結。
- 調整語系檔案結構，將 `hero.description` 遷移至 `overview.description`。
- 更新 `ProjectPageTemplate` 以整合新元件並優化視覺層次。

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -6,6 +6,11 @@
   "projectShowcase": "Project Showcase",
   "codeSnippet": "Core Code",
   "technicalSpotlight": "Technical Spotlight",
-  "technicalChallenges": "Technical Challenges & Solutions"
+  "technicalChallenges": "Technical Challenges & Solutions",
+  "employmentTime": "Employment Duration",
+  "teamSize": "Team Size",
+  "projectType": "Project Type",
+  "platforms": "Platforms",
+  "techStack": "Tech Stack"
 }
 
